--- a/login/login.html
+++ b/login/login.html
@@ -71,11 +71,11 @@
           </div>
           <button class="login_button">로그인</button>
           <ul>
-            <li>회원가입</li>
+            <li class="login_sign">회원가입</li>
             <p>|</p>
-            <li>아이디 찾기</li>
+            <li class="login_find_id">아이디 찾기</li>
             <p>|</p>
-            <li>비밀번호 찾기</li>
+            <li class="login_find_pw">비밀번호 찾기</li>
           </ul>
         </section>
         <section class="login_02">
