--- a/eventpromotion/event.html
+++ b/eventpromotion/event.html
@@ -70,7 +70,7 @@
               </div>
             </div>
           </div>
-          <div class="header_inner_logo">
+          <div class="header_inner_logo" id="header_logo">
             <img src="../imgs/logo.png" alt="logo" />
           </div>
         </div>
