--- a/login/login.html
+++ b/login/login.html
@@ -10,10 +10,13 @@
     ></script>
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/login.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
     <script defer src="./js/login.js"></script>
     <script defer src="../common.js"></script>
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_login.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <!-- domain icon -->
     <link rel="icon" type="images/png" href="../logo/logo.png" />
     <title>로그인</title>
@@ -23,16 +26,31 @@
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
-          <i class="fa-solid fa-chevron-right"></i>
+          <i class="fa-solid fa-chevron-right header_location_event"></i>
         </p>
       </div>
       <div class="header_inner">
+        <!-- trigger start -->
+        <nav>
+          <ul class="gnb">
+            <li class="header_location_fruit"><a>과일</a></li>
+            <li class="header_location_vegetable"><a>채소</a></li>
+            <li class="header_location_etc"><a>가공식품 / 기타</a></li>
+            <li class="header_location_event"><a>이벤트</a></li>
+          </ul>
+        </nav>
+        <div class="trigger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- trigger end -->
         <div class="header_inner_left">
           <ul>
-            <li>과일</li>
-            <li>채소</li>
-            <li>가공식품 / 기타</li>
-            <li>이벤트</li>
+            <li class="header_location_fruit"><a>과일</a></li>
+            <li class="header_location_vegetable"><a>채소</a></li>
+            <li class="header_location_etc"><a>가공식품 / 기타</a></li>
+            <li class="header_location_event"><a>이벤트</a></li>
           </ul>
         </div>
         <div class="header_inner_right">
@@ -45,11 +63,11 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="basket">
-              <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
+              <i class="fa-solid fa-cart-shopping"><p>3</p></i>
             </div>
           </div>
         </div>
-        <div class="header_inner_logo">
+        <div class="header_inner_logo" id="header_logo">
           <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
@@ -96,6 +114,14 @@
     </main>
     <footer>
       <div class="footer_inner">
+        <div class="up_btn">
+          <a href="#header">
+            <div class="up_arrow_container">
+              <i class="fas fa-chevron-up"></i>
+            </div>
+          </a>
+        </div>
+
         <div class="footer_inner_left">
           <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
