--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     ></script>
     <!-- custom CSS & JS-->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/variables.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <script defer src="./script.js"></script>
-    <script defer src="../common.js"></script>
+    <script defer src="./common.js"></script>
     <!-- responsive CSS -->
     <link rel="stylesheet" href="./res_style.css" />
     <!-- domain icon -->
@@ -865,7 +870,6 @@
             </div>
           </a>
         </div>
-
         <div class="footer_inner_left">
           <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
