login test commit

--- a/login/mypage.html
+++ b/login/mypage.html
@@ -10,8 +10,13 @@
     ></script>
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/mypage.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
     <script defer src="./js/mypage.js"></script>
     <script defer src="../common.js"></script>
+    <!-- media screen -->
+    <link rel="stylesheet" href="./styles/res_find.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_mypage.css" />
     <!-- domain icon -->
@@ -116,6 +121,14 @@
     </main>
     <footer>
       <div class="footer_inner">
+        <div class="up_btn">
+          <a href="#header">
+            <div class="up_arrow_container">
+              <i class="fas fa-chevron-up"></i>
+            </div>
+          </a>
+        </div>
+
         <div class="footer_inner_left">
           <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
