--- a/login/find-id.html
+++ b/login/find-id.html
@@ -10,7 +10,11 @@
       crossorigin="anonymous"
     ></script>
     <!-- custom css & js -->
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/variables.css" />
     <link rel="stylesheet" href="./styles/find.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
     <script defer src="./js/find.js"></script>
     <script defer src="../common.js"></script>
     <!-- media screen -->
@@ -35,7 +39,7 @@
             <li>채소</li>
             <li>가공식품 / 기타</li>
             <li>이벤트</li>
-            <div class="header_menu_trigger">
+            <div class="trigger">
               <span></span>
               <span></span>
               <span></span>
@@ -119,6 +123,14 @@
     </main>
     <footer>
       <div class="footer_inner">
+        <div class="up_btn">
+          <a href="#header">
+            <div class="up_arrow_container">
+              <i class="fas fa-chevron-up"></i>
+            </div>
+          </a>
+        </div>
+
         <div class="footer_inner_left">
           <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
