--- a/login/find-id.html
+++ b/login/find-id.html
@@ -49,7 +49,7 @@
           <ul>
             <li>과일</li>
             <li>채소</li>
-            <li>가공식품 / 기타</li>
+            <li>가공식품/기타</li>
             <li>이벤트</li>
           </ul>
         </div>
@@ -60,14 +60,15 @@
           <div class="inner_right_bottom">
             <div class="search_bar">
               <input type="text" placeholder="검색어를 입력해주세요." />
-              <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+              <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+            <i class="fa-solid fa-magnifying-glass res_magnify"></i>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
             </div>
           </div>
         </div>
-        <div class="header_inner_logo" id="header_logo">
+        <div id="header_logo" class="header_inner_logo">
           <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
