--- a/login/login.html
+++ b/login/login.html
@@ -35,7 +35,7 @@
           <ul class="gnb">
             <li class="header_location_fruit"><a>과일</a></li>
             <li class="header_location_vegetable"><a>채소</a></li>
-            <li class="header_location_etc"><a>가공식품 / 기타</a></li>
+            <li class="header_location_etc"><a>가공식품/기타</a></li>
             <li class="header_location_event"><a>이벤트</a></li>
           </ul>
         </nav>
@@ -49,7 +49,7 @@
           <ul>
             <li class="header_location_fruit"><a>과일</a></li>
             <li class="header_location_vegetable"><a>채소</a></li>
-            <li class="header_location_etc"><a>가공식품 / 기타</a></li>
+            <li class="header_location_etc"><a>가공식품/기타</a></li>
             <li class="header_location_event"><a>이벤트</a></li>
           </ul>
         </div>
@@ -60,8 +60,9 @@
           <div class="inner_right_bottom">
             <div class="search_bar">
               <input type="text" placeholder="검색어를 입력해주세요." />
-              <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+              <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+            <i class="fa-solid fa-magnifying-glass res_magnify"></i>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"><p>3</p></i>
             </div>
