--- a/login/sign.html
+++ b/login/sign.html
@@ -49,7 +49,7 @@
           <ul>
             <li>과일</li>
             <li>채소</li>
-            <li>가공식품 / 기타</li>
+            <li>가공식품/기타</li>
             <li>이벤트</li>
           </ul>
         </div>
@@ -60,7 +60,7 @@
           <div class="inner_right_bottom">
             <div class="search_bar">
               <input type="text" placeholder="검색어를 입력해주세요." />
-              <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+              <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
             <div class="basket">
