--- a/login/find-pw.html
+++ b/login/find-pw.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/find.css" />
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
-    <script defer src="./js/find-id.js"></script>
+    <script defer src="./js/find-pw.js"></script>
     <script defer src="../common.js"></script>
     <!-- response -->
     <link rel="stylesheet" href="./styles/res_find.css" />
@@ -76,7 +76,7 @@
     <main id="container">
       <div class="find_inner">
         <form class="find_id">
-          <h2>아이디 찾기</h2>
+          <h2>비밀번호 찾기</h2>
           <div class="find_switch">
             <div class="find_switch_call">
               <p class="active">휴대폰 인증</p>
@@ -123,7 +123,7 @@
           <input
             type="submit"
             class="find_button"
-            value="아이디 찾기"
+            value="비밀번호 찾기"
             disabled
           />
         </form>
