--- a/detail/detail.html
+++ b/detail/detail.html
@@ -24,21 +24,21 @@
     <title>상세페이지</title>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
-          <i class="fa-solid fa-chevron-right"></i>
+          <i class="fa-solid fa-chevron-right header_location_event"></i>
         </p>
       </div>
       <div class="header_inner">
         <!-- trigger start -->
         <nav>
           <ul class="gnb">
-            <li><a href="#">과일</a></li>
-            <li><a href="#">채소</a></li>
-            <li><a href="#">가공식품/기타</a></li>
-            <li><a href="#">이벤트</a></li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </nav>
         <div class="trigger">
@@ -47,24 +47,17 @@
           <span></span>
         </div>
         <!-- trigger end -->
-
         <div class="header_inner_left">
           <ul>
-            <li>과일</li>
-            <li>채소</li>
-            <li>가공식품 / 기타</li>
-            <li>이벤트</li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </div>
         <div class="header_inner_right">
           <div class="inner_right_top">
-            <ul>
-              <li>로그인</li>
-              <p>|</p>
-              <li>마이페이지</li>
-              <p>|</p>
-              <li>회원가입</li>
-            </ul>
+            <ul class="header_login"></ul>
           </div>
           <div class="inner_right_bottom">
             <div class="search_bar">
@@ -77,7 +70,7 @@
             </div>
           </div>
         </div>
-        <div class="header_inner_logo" id="header_logo">
+        <div id="header_logo" class="header_inner_logo">
           <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
@@ -157,7 +150,7 @@
         <div class="detail_content">
           <div class="review_text">
             <span class="text_review">리뷰</span>
-            <span class="text_few">232건</span>
+            <span class="text_few">232</span>
           </div>
           <div class="review_star">
             <span class="star">평균 별점</span>
@@ -309,76 +302,49 @@
       <section class="detail_product">
         <div class="product_title">
           <h1>상품 설명</h1>
-          <img src="./imgs/img3.png" alt="img3" />
+          <img class="product_title_img" src="./imgs/img3.png" alt="img3" />
           <div class="img_group">
-            <img src="./imgs/img4.png" alt="img4" />
-            <img src="./imgs/img5.png" alt="img5" />
-            <img src="./imgs/img6.png" alt="img6" />
-            <img src="./imgs/img7.png" alt="img7" />
+            <img class="product_sub_img" src="./imgs/img.png" alt="img" />
+            <img class="product_sub_img" src="./imgs/img.png" alt="img" />
+            <img class="product_sub_img" src="./imgs/img.png" alt="img" />
+            <img class="product_sub_img" src="./imgs/img.png" alt="img" />
           </div>
         </div>
         <div class="product_thumb">
           <div class="thumb_one">
-            <div>
+            <div class="ex_content">
               <p>1</p>
-              <h4>크기와 모양을 기준으로 선별하지 않아요.</h4>
-              <span>
-                일반 찰토마토는 크기와 모양을 일정하게 선별하고, 개성만점
-                오돌토돌 찰토마토는 다양해요. <br />
-                갈라진 모양, 호박 모양 등 다양한 모습을 가진 토마토를 차별없이
-                담아드리고 있어요.
-              </span>
+              <h4 class="product_ex_title">제목</h4>
+              <span class="product_ex_desc">설명</span>
             </div>
-            <img src="./imgs/img4.png" alt="thumb" />
-          </div>
-          <div class="thumb_one">
-            <div>
-              <p>2</p>
-              <h4>수확시기에 따라 맛이 조금씩 달라요.</h4>
-              <span>
-                토마토는 생물이기 때문에 수확하는 시기와 날씨에 따라서 맛이
-                달라지는 게 당연해요! <br />특히나 긴 장마가 있는 시기에는 맛의
-                차이가 더 도드라질 수 있어요. <br />
-                당도 조절제 없이 자연의 변화를 고스란히 담은 토마토 본연의 맛을
-                알아봐주시길 부탁드립니다.
-              </span>
-            </div>
-            <img src="./imgs/img5.png" alt="thumb" />
-          </div>
-          <div class="thumb_one">
-            <div>
-              <p>3</p>
-              <h4>꼭지가 떨어지거나, 말라 보일 수 있어요.</h4>
-              <span>
-                특성상 꼭지가 쉽게 떨어지고, 맛과 향을 위해 물 조절을 하게 되면
-                노랗게 변하거나 마르기도 해요.<br />
-                토마토가 자라는 과정에서 자연스럽게 나타나는 현상으로 절대
-                오래된 것이 아니에요. <br />농담에서 보내드리는 방울토마토는
-                매일 새벽 수확해 당일 출고를 원칙으로 합니다.
-              </span>
-            </div>
-            <img src="./imgs/img6.png" alt="thumb" />
-          </div>
-          <div class="thumb_one">
-            <div>
-              <p>4</p>
-              <h4>배송중 금이 가거나 터진 토마토가 나올 수 있어요.</h4>
-              <span>
-                덥고 습한 날씨엔 토마토가 열을 많이 받거나 습을 흡수해 과피에
-                금이가는 ‘열과'가 종종 발생해요.<br />
-                포장 작업을 할 때 열과는 모두 선별하고 있지만 배송중에 서로
-                부딪혀 열과가 생기기도 해요.<br />
-                터진 토마토를 보냈다고 오해하기 쉽지만 드시는 데에는 문제가
-                없답니다.<br />
-                정도가 심한 경우 고객 센터를 통해 문의 남겨주시면 신속한 처리를
-                도와드려요.
-              </span>
-            </div>
-            <img src="./imgs/img7.png" alt="thumb" />
+            <!-- <img class="product_sub_img" /> -->
           </div>
         </div>
       </section>
-
+      <!-- <div class="thumb_one">
+            <div class="ex_content">
+              <p>2</p>
+              <h4 class="product_ex_title">제목</h4>
+              <span class="product_ex_desc">설명</span>
+            </div>
+            <img class="product_sub_img" />
+          </div>
+          <div class="thumb_one">
+            <div class="ex_content">
+              <p>3</p>
+              <h4 class="product_ex_title">제목</h4>
+              <span class="product_ex_desc">설명</span>
+            </div>
+            <img class="product_sub_img" />
+          </div>
+          <div class="thumb_one">
+            <div class="ex_content">
+              <p>4</p>
+              <h4 class="product_ex_title">제목</h4>
+              <span class="product_ex_desc">설명</span>
+            </div>
+            <img class="product_sub_img" />
+          </div> -->
       <div class="detail_line"></div>
 
       <!-- 문의 섹션 -->
@@ -574,13 +540,10 @@
     <footer>
       <div class="footer_inner">
         <div class="up_btn">
-          <a href="#header">
-            <div class="up_arrow_container">
-              <i class="fas fa-chevron-up"></i>
-            </div>
-          </a>
+          <div id="footer_to_header" class="up_arrow_container">
+            <i class="fas fa-chevron-up"></i>
+          </div>
         </div>
-
         <div class="footer_inner_left">
           <img src="../imgs/logo_02.png" alt="logo_02" />
           <p>ⓒ 농담 All rights reserved</p>
