--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <title>main</title>
   </head>
   <body>
-    <header id="header">
+    <header>
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
-          <i class="fa-solid fa-chevron-right"></i>
+          <i class="fa-solid fa-chevron-right header_location_event"></i>
         </p>
       </div>
       <div class="header_inner">
         <!-- trigger start -->
         <nav>
           <ul class="gnb">
-            <li><a href="#">과일</a></li>
-            <li><a href="#">채소</a></li>
-            <li><a href="#">가공식품/기타</a></li>
-            <li><a href="#">이벤트</a></li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </nav>
         <div class="trigger">
@@ -49,24 +49,17 @@
           <span></span>
         </div>
         <!-- trigger end -->
-
         <div class="header_inner_left">
           <ul>
-            <li>과일</li>
-            <li>채소</li>
-            <li>가공식품 / 기타</li>
-            <li>이벤트</li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </div>
         <div class="header_inner_right">
           <div class="inner_right_top">
-            <ul>
-              <li>로그인</li>
-              <p>|</p>
-              <li>마이페이지</li>
-              <p>|</p>
-              <li>회원가입</li>
-            </ul>
+            <ul class="header_login"></ul>
           </div>
           <div class="inner_right_bottom">
             <div class="search_bar">
@@ -79,7 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="header_inner_logo" id="header_logo">
+        <div id="header_logo" class="header_inner_logo">
           <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
