--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
-          <i class="fa-solid fa-chevron-right"></i>
+          <i class="fa-solid fa-chevron-right header_location_event"></i>
         </p>
       </div>
       <div class="header_inner">
         <!-- trigger start -->
         <nav>
           <ul class="gnb">
-            <li><a href="#">과일</a></li>
-            <li><a href="#">채소</a></li>
-            <li><a href="#">가공식품/기타</a></li>
-            <li><a href="#">이벤트</a></li>
+            <li class="header_location_fruit"><a>과일</a></li>
+            <li class="header_location_vegetable"><a>채소</a></li>
+            <li class="header_location_etc"><a>가공식품/기타</a></li>
+            <li class="header_location_event"><a>이벤트</a></li>
           </ul>
         </nav>
         <div class="trigger">
@@ -49,24 +49,17 @@
           <span></span>
         </div>
         <!-- trigger end -->
-
         <div class="header_inner_left">
           <ul>
-            <li>과일</li>
-            <li>채소</li>
-            <li>가공식품 / 기타</li>
-            <li>이벤트</li>
+            <li class="header_location_fruit"><a>과일</a></li>
+            <li class="header_location_vegetable"><a>채소</a></li>
+            <li class="header_location_etc"><a>가공식품/기타</a></li>
+            <li class="header_location_event"><a>이벤트</a></li>
           </ul>
         </div>
         <div class="header_inner_right">
           <div class="inner_right_top">
-            <ul>
-              <li>로그인</li>
-              <p>|</p>
-              <li>마이페이지</li>
-              <p>|</p>
-              <li>회원가입</li>
-            </ul>
+            <ul class="header_login"></ul>
           </div>
           <div class="inner_right_bottom">
             <div class="search_bar">
@@ -75,7 +68,7 @@
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
             <div class="basket">
-              <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
+              <i class="fa-solid fa-cart-shopping"><p>3</p></i>
             </div>
           </div>
         </div>
