--- a/eventpromotion/event.html
+++ b/eventpromotion/event.html
@@ -28,10 +28,10 @@
           <!-- trigger start -->
           <nav>
             <ul class="gnb">
-              <li><a href="#">과일</a></li>
-              <li><a href="#">채소</a></li>
-              <li><a href="#">가공식품/기타</a></li>
-              <li><a href="#">이벤트</a></li>
+              <li class="header_location_fruit">과일</li>
+              <li class="header_location_vegetable">채소</li>
+              <li class="header_location_etc">가공식품/기타</li>
+              <li class="header_location_event">이벤트</li>
             </ul>
           </nav>
           <div class="trigger">
@@ -40,24 +40,17 @@
             <span></span>
           </div>
           <!-- trigger end -->
-
           <div class="header_inner_left">
             <ul>
-              <li>과일</li>
-              <li>채소</li>
-              <li>가공식품 / 기타</li>
-              <li>이벤트</li>
+              <li class="header_location_fruit">과일</li>
+              <li class="header_location_vegetable">채소</li>
+              <li class="header_location_etc">가공식품/기타</li>
+              <li class="header_location_event">이벤트</li>
             </ul>
           </div>
           <div class="header_inner_right">
             <div class="inner_right_top">
-              <ul>
-                <li>로그인</li>
-                <p>|</p>
-                <li>마이페이지</li>
-                <p>|</p>
-                <li>회원가입</li>
-              </ul>
+              <ul class="header_login"></ul>
             </div>
             <div class="inner_right_bottom">
               <div class="search_bar">
@@ -70,7 +63,7 @@
               </div>
             </div>
           </div>
-          <div class="header_inner_logo" id="header_logo">
+          <div id="header_logo" class="header_inner_logo">
             <img src="../imgs/logo.png" alt="logo" />
           </div>
         </div>
@@ -284,13 +277,10 @@
       <footer>
         <div class="footer_inner">
           <div class="up_btn">
-            <a href="#header">
-              <div class="up_arrow_container">
-                <i class="fas fa-chevron-up"></i>
-              </div>
-            </a>
+            <div id="footer_to_header" class="up_arrow_container">
+              <i class="fas fa-chevron-up"></i>
+            </div>
           </div>
-
           <div class="footer_inner_left">
             <img src="../imgs/logo_02.png" alt="logo_02" />
             <p>ⓒ 농담 All rights reserved</p>
