--- a/login/find-pw.html
+++ b/login/find-pw.html
@@ -22,7 +22,7 @@
     <title>계정 찾기</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="header_event">
         <p>
           지금 농담에 가입하고 <b>매일 룰렛 이벤트</b>로 상품 받아 가세요!
