--- a/login/sign.html
+++ b/login/sign.html
@@ -33,10 +33,10 @@
         <!-- trigger start -->
         <nav>
           <ul class="gnb">
-            <li class="header_location_fruit"><a>과일</a></li>
-            <li class="header_location_vegetable"><a>채소</a></li>
-            <li class="header_location_etc"><a>가공식품/기타</a></li>
-            <li class="header_location_event"><a>이벤트</a></li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </nav>
         <div class="trigger">
@@ -47,10 +47,10 @@
         <!-- trigger end -->
         <div class="header_inner_left">
           <ul>
-            <li class="header_location_fruit"><a>과일</a></li>
-            <li class="header_location_vegetable"><a>채소</a></li>
-            <li class="header_location_etc"><a>가공식품/기타</a></li>
-            <li class="header_location_event"><a>이벤트</a></li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </div>
         <div class="header_inner_right">
@@ -64,11 +64,11 @@
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
             <div class="basket">
-              <i class="fa-solid fa-cart-shopping"><p>3</p></i>
+              <i class="fa-solid fa-cart-shopping"> <p>3</p></i>
             </div>
           </div>
         </div>
-        <div class="header_inner_logo" id="header_logo">
+        <div id="header_logo" class="header_inner_logo">
           <img src="../imgs/logo.png" alt="logo" />
         </div>
       </div>
