--- a/pages/fruit.html
+++ b/pages/fruit.html
@@ -28,10 +28,10 @@
         <!-- trigger start -->
         <nav>
           <ul class="gnb">
-            <li class="header_location_fruit"><a>과일</a></li>
-            <li class="header_location_vegetable"><a>채소</a></li>
-            <li class="header_location_etc"><a>가공식품/기타</a></li>
-            <li class="header_location_event"><a>이벤트</a></li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </nav>
         <div class="trigger">
@@ -42,10 +42,10 @@
         <!-- trigger end -->
         <div class="header_inner_left">
           <ul>
-            <li class="header_location_fruit"><a>과일</a></li>
-            <li class="header_location_vegetable"><a>채소</a></li>
-            <li class="header_location_etc"><a>가공식품/기타</a></li>
-            <li class="header_location_event"><a>이벤트</a></li>
+            <li class="header_location_fruit">과일</li>
+            <li class="header_location_vegetable">채소</li>
+            <li class="header_location_etc">가공식품/기타</li>
+            <li class="header_location_event">이벤트</li>
           </ul>
         </div>
         <div class="header_inner_right">
