2504092320 commit seong-il

--- a/detail/detail.html
+++ b/detail/detail.html
@@ -160,20 +160,19 @@
             <div class="review_member">
               <div>
                 <p>
-                  김 * 연
+                  송 * 관
                   <span>★★★★★</span>
                 </p>
                 <div class="member_content">
                   <img src="./imgs/img1.png" alt="img1" />
                   <div>
                     <span>
-                      못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
-                      상품들이 선택받지 못하고 버려진다는게 너무
-                      마음아프네요..😢 배송도 빠르고 상품이 너무 좋아요!!
-                      정기배송 시켜볼 생각이에요!!
+                      이렇게 신선한 상품이 이렇게 빨리 오다니..! 시간 맞춰 딱
+                      도착해서 너무 만족스럽고, 덕분에 요리 준비도 수월했어요.
+                      정기배송 고민 중이에요!
                     </span>
                     <p>
-                      2025.03.10 |
+                      2025.03.11 |
                       <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
                     </p>
                   </div>
@@ -181,20 +180,19 @@
               </div>
               <div>
                 <p>
-                  이 * 진
+                  최 * 연
                   <span>★★★★☆</span>
                 </p>
                 <div class="member_content">
                   <img src="./imgs/img2.png" alt="img2" />
                   <div>
                     <span>
-                      다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
-                      찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은 정기배송
-                      시켜봤는데 선한데 감자도 달달포슬한 편이고 버섯도 세가지
-                      종류나
+                      받자마자 기분이 좋아졌어요! 배송이 정말 빠르게 도착했고,
+                      포장도 깔끔해서 신경 쓴 느낌이 팍팍 났어요. 다음에도 또
+                      주문하고 싶어요 😊
                     </span>
                     <p>
-                      2025.01.02 |
+                      2025.03.02 |
                       <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
                     </p>
                   </div>
@@ -205,20 +203,19 @@
               <div class="review_member">
                 <div>
                   <p>
-                    김 * 연
+                    장 * 아
                     <span>★★★★★</span>
                   </p>
                   <div class="member_content">
                     <img src="./imgs/img1.png" alt="img1" />
                     <div>
                       <span>
-                        못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
-                        상품들이 선택받지 못하고 버려진다는게 너무
-                        마음아프네요..😢 배송도 빠르고 상품이 너무 좋아요!!
-                        정기배송 시켜볼 생각이에요!!
+                        배송이 진짜 엄청 빨라요! 주문하고 하루 만에 받아서 깜짝
+                        놀랐어요. 상품도 정리 잘 되어 있어서 바로 냉장고에 쏙쏙
+                        넣었답니다!😋
                       </span>
                       <p>
-                        2025.03.10 |
+                        2025.02.22 |
                         <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
                       </p>
                     </div>
@@ -226,20 +223,19 @@
                 </div>
                 <div>
                   <p>
-                    이 * 진
+                    이 * 일
                     <span>★★★★☆</span>
                   </p>
                   <div class="member_content">
                     <img src="./imgs/img2.png" alt="img2" />
                     <div>
                       <span>
-                        다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
-                        찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은
-                        정기배송 시켜봤는데 선한데 감자도 달달포슬한 편이고
-                        버섯도 세가지 종류나
+                        받아보니 상태 너무 좋아서 감탄했어요! 못난이라더니 다들
+                        너무 예쁘고 싱싱해서 기분까지 좋아졌어요. 다양하게
+                        들어있어서 샐러드 만들기 딱이에요!
                       </span>
                       <p>
-                        2025.01.02 |
+                        2025.01.31 |
                         <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
                       </p>
                     </div>
@@ -249,20 +245,19 @@
               <div class="review_member">
                 <div>
                   <p>
-                    김 * 연
+                    박 * 준
                     <span>★★★★★</span>
                   </p>
                   <div class="member_content">
                     <img src="./imgs/img1.png" alt="img1" />
                     <div>
                       <span>
-                        못난이들도 있긴 하지만.. 전체적으로 너무 이뻐요!! 이런
-                        상품들이 선택받지 못하고 버려진다는게 너무
-                        마음아프네요..😢 배송도 빠르고 상품이 너무 좋아요!!
-                        정기배송 시켜볼 생각이에요!!
+                        채소 하나하나 상태가 진짜 좋아요. 감자도 포슬하고,
+                        버섯도 신선하게 도착했어요. 정기배송 시작하길 잘한 것
+                        같아요. 앞으로도 잘 부탁드려요!
                       </span>
                       <p>
-                        2025.03.10 |
+                        2025.01.11 |
                         <strong>오돌토돌 개성만점 유기농토마토 2kg</strong>
                       </p>
                     </div>
@@ -270,17 +265,16 @@
                 </div>
                 <div>
                   <p>
-                    이 * 진
+                    한 * 구
                     <span>★★★★☆</span>
                   </p>
                   <div class="member_content">
                     <img src="./imgs/img2.png" alt="img2" />
                     <div>
                       <span>
-                        다들 너무 싱싱하고 좋았어요. 못난이가 어디있나 찾아도 못
-                        찾겠어요. ^^ 샐러드 박스는 저에게 주는 선물 같은
-                        정기배송 시켜봤는데 선한데 감자도 달달포슬한 편이고
-                        버섯도 세가지 종류나
+                        상품 퀄리티 너무 좋아요! 못난이들이라더니 오히려 더
+                        자연스럽고 예뻐요. 맛도 좋고 구성이 알차서 받는 내내
+                        기분 좋아졌어요 😍
                       </span>
                       <p>
                         2025.01.02 |
@@ -407,7 +401,8 @@
           <div>5</div>
         </div>
       </section>
-      <div class="modal_overlay" style="display: none">
+      <!-- Contact us modal start -->
+      <div class="modal_overlay">
         <div class="modal">
           <div class="modal_header">
             <h2>문의 등록</h2>
@@ -422,6 +417,7 @@
           </div>
         </div>
       </div>
+      <!-- Contact us modal end -->
       <div class="detail_line"></div>
       <!-- 보상정책 -->
       <section class="detail_policy">
