--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     </header>
     <main>
       <section class="main_banner">
+
         <div class="main_innerbanner1">
           <img src="./imgs/banner1.png" alt="banner1" />
           <div class="banner_text">
@@ -98,8 +99,9 @@
             </div>
           </div>
         </div>
+
         <div class="main_innerbanner2">
-          <img src="./imgs/banner2.png" alt="banner2" />
+          <img src="./imgs/banner2.jpg" alt="banner2" />
           <div class="banner2_text">
             <span>못생긴 채소로 예쁜 샐러드를</span>
             <h2>
@@ -109,6 +111,7 @@
             <p>농부만의 특별 레시피 만나러 가기 ></p>
           </div>
         </div>
+      
         <div class="main_innerbanner3">
           <img src="./imgs/banner3.png" alt="banner3" />
           <div class="banner3_text">
@@ -116,6 +119,7 @@
             <h2>무 료 배 송</h2>
           </div>
         </div>
+
         <div class="main_innerbanner4">
           <img src="./imgs/banner4.jpg" alt="banner4" />
           <div class="banner4_text">
@@ -124,8 +128,12 @@
             <h2>매일매일 <b>룰렛이벤트</b></h2>
             <p>타 쿠폰과 중복 적용 가능 / 일부 상품 제외</p>
             <div class="banner_time">00 : 12 : 34 : 12</div>
+            <div class="banner4_img">
+              <img src="./imgs/event_titlesub.png" alt="titlesub" >
+            </div>
           </div>
         </div>
+
       </section>
 
       <section id="main_con1">
@@ -542,7 +550,7 @@
               <div class="recipe_info">
                 <div class="recipe_title">
                   <i class="fa-regular fa-heart"></i>
-                  <h4>우리집에서 멕시코의 향기를 <br />과카몰리 🥑</h4>
+                  <h4>집에서 멕시코의 향기를 <br />과카몰리 🥑</h4>
                   <button>+17</button>
                 </div>
                 <div class="recipe_text">
@@ -558,7 +566,7 @@
               <div class="recipe_info">
                 <div class="recipe_title">
                   <i class="fa-regular fa-heart"></i>
-                  <h4>빵 위에 얹어 먹으면 맛이 두배! <br />레몬딜버터!</h4>
+                  <h4>빵과 먹으면 맛이 두배! <br />레몬딜버터!</h4>
                   <button>+17</button>
                 </div>
                 <div class="recipe_text">
@@ -607,7 +615,7 @@
               <div class="recipe_info">
                 <div class="recipe_title">
                   <i class="fa-regular fa-heart"></i>
-                  <h4>피자 먹을 때 빠지면 서운하지!<br />오이 피클🥒</h4>
+                  <h4>새콤달콤한 매력의<br />오이 피클🥒</h4>
                   <button>+17</button>
                 </div>
                 <div class="recipe_text">
@@ -627,7 +635,7 @@
           <hr />
           <div class="main_sale_title">
             <h1>오늘의 특가상품 ✨</h1>
-            <div class="sale_time">03:27:24</div>
+            <div class="sale_time">03 : 27 : 24</div>
           </div>
           <ul class="main_it">
             <!-- <li class="main_type2">
