--- a/detail/detail.html
+++ b/detail/detail.html
@@ -286,7 +286,9 @@
               </div>
             </div>
           </div>
-          <button class="review_more">232건 리뷰 더 보기 ▼</button>
+          <button class="review_more">
+            232건 리뷰 더 보기 <i class="fas fa-angle-down"></i>
+          </button>
         </div>
       </section>
 
