--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     </header>
     <main>
       <section class="main_banner">
-
         <div class="main_innerbanner1">
           <img src="./imgs/banner1.png" alt="banner1" />
           <div class="banner_text">
@@ -111,7 +110,7 @@
             <p>농부만의 특별 레시피 만나러 가기 ></p>
           </div>
         </div>
-      
+
         <div class="main_innerbanner3">
           <img src="./imgs/banner3.png" alt="banner3" />
           <div class="banner3_text">
@@ -129,11 +128,10 @@
             <p>타 쿠폰과 중복 적용 가능 / 일부 상품 제외</p>
             <div class="banner_time">00 : 12 : 34 : 12</div>
             <div class="banner4_img">
-              <img src="./imgs/event_titlesub.png" alt="titlesub" >
+              <img src="./imgs/event_titlesub.png" alt="titlesub" />
             </div>
           </div>
         </div>
-
       </section>
 
       <section id="main_con1">
@@ -635,7 +633,7 @@
           <hr />
           <div class="main_sale_title">
             <h1>오늘의 특가상품 ✨</h1>
-            <div class="sale_time">03 : 27 : 24</div>
+            <div class="sale_time"></div>
           </div>
           <ul class="main_it">
             <!-- <li class="main_type2">
