--- a/eventpromotion/event.html
+++ b/eventpromotion/event.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/res_header.css" />
     <link rel="stylesheet" href="./styles/res_event.css" />
+    <link rel="stylesheet" href="../styles/res_footer.css" />
     <script defer src="./js/event.js"></script>
     <script defer src="../common.js"></script>
     <title>Event page</title>
