--- a/detail/detail.html
+++ b/detail/detail.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/variables.css" />
     <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/res_footer.css" />
     <link rel="stylesheet" href="../styles/header.css" />
     <link rel="stylesheet" href="../styles/res_header.css" />
     <script defer src="./js/detail.js"></script>
