find responsive modified

--- a/login/find-pw.html
+++ b/login/find-pw.html
@@ -10,8 +10,7 @@
     ></script>
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/find.css" />
-    <link rel="stylesheet" href="../styles/header.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="./styles/res_find.css" />
     <script defer src="./js/find-pw.js"></script>
     <script defer src="../common.js"></script>
     <!-- response -->
