--- a/login/mypage.html
+++ b/login/mypage.html
@@ -10,8 +10,7 @@
     ></script>
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/mypage.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
-    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="./styles/res_mypage.css" />
     <script defer src="./js/mypage.js"></script>
     <script defer src="../common.js"></script>
     <!-- response -->
