final nongdam update

--- a/pages/search.html
+++ b/pages/search.html
@@ -68,18 +68,20 @@
       </div>
     </header>
     <main>
-      <section id="fruits">
-        <div class="fruit_inner">
-          <ul class="fruit_it"></ul>
+      <section id="search">
+        <div class="search_inner">
+          <ul class="search_it"></ul>
         </div>
       </section>
     </main>
     <footer>
       <div class="footer_inner">
         <div class="up_btn">
-          <div id="footer_to_header" class="up_arrow_container">
-            <i class="fas fa-chevron-up"></i>
-          </div>
+          <a href="#header">
+            <div class="up_arrow_container">
+              <i class="fas fa-chevron-up"></i>
+            </div>
+          </a>
         </div>
         <div class="footer_inner_left">
           <img src="../imgs/logo_02.png" alt="logo_02" />
