seong-il build js & debugging update

--- a/pages/search.html
+++ b/pages/search.html
@@ -68,7 +68,7 @@
       </div>
     </header>
     <main>
-      <section id="search">
+      <section id="search" class="search">
         <div class="search_inner">
           <ul class="search_it"></ul>
         </div>
