--- a/login/mypage.html
+++ b/login/mypage.html
@@ -123,6 +123,23 @@
         </section>
         <p class="mypage_quit">계정 탈퇴하기</p>
       </div>
+      <div class="mypage_modal">
+        <div class="modal_inner">
+          <h2>회원 정보 수정</h2>
+          <div class="modal_info_before">
+            <p>현재 이메일</p>
+            <p>audrhks072@naver.com</p>
+          </div>
+          <div class="modal_info_after">
+            <p>변경할 이메일</p>
+            <p>audrhks72@naver.com</p>
+          </div>
+          <div class="modal_buttons">
+            <button>취소</button>
+            <button>수정</button>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer_inner">
