--- a/login/mypage.html
+++ b/login/mypage.html
@@ -123,6 +123,7 @@
         </section>
         <p class="mypage_quit">계정 탈퇴하기</p>
       </div>
+      <div class="modal_overlay"></div>
       <div class="mypage_modal">
         <div class="modal_inner">
           <h2>회원 정보 수정</h2>
@@ -132,11 +133,11 @@
           </div>
           <div class="modal_info_after">
             <p>변경할 이메일</p>
-            <p>audrhks72@naver.com</p>
+            <input type="text" placeholder="변경할 이메일을 입력해주세요." />
           </div>
           <div class="modal_buttons">
-            <button>취소</button>
-            <button>수정</button>
+            <button class="modal_close">취소</button>
+            <button class="modal_change">수정</button>
           </div>
         </div>
       </div>
