--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="./slick-slider/slick-theme.css" />
     <script src="./slick-slider/slick.js"></script>
     <script src="./slick-slider/slick.min.js"></script>
+    <!-- swiper -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Fontawesome -->
     <script
       src="https://kit.fontawesome.com/afd4c8363e.js"
@@ -78,61 +84,65 @@
       </div>
     </header>
     <main>
-      <section class="main_banner">
-        <div class="main_innerbanner1">
-          <img src="./imgs/banner1.png" alt="banner1" />
-          <div class="banner_text">
-            <div class="banner_tag">
-              <span>지구를 위해 건강을 위해</span>
-              <div class="banner_title">
-                <h2>못생겨도 괜찮아!</h2>
-                <p>농부만의 소싱철학 알아보기 ></p>
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div id="main_innerbanner1" class="swiper-slide">
+            <img src="./imgs/banner1.png" alt="banner1" />
+            <div class="banner_text">
+              <div class="banner_tag">
+                <span>지구를 위해 건강을 위해</span>
+                <div class="banner_title">
+                  <h2>못생겨도 괜찮아!</h2>
+                  <p>농부만의 소싱철학 알아보기 ></p>
+                </div>
+              </div>
+              <div class="banner_text1">
+                <p>
+                  농산물의 품질은 외형이 아닌 <b>신선함, 맛</b><br />그리고
+                  <b>건강한 생산 과정</b>에 있다는 믿음으로<br />
+                  <b>“농부”</b>가 탄생했습니다.
+                </p>
               </div>
             </div>
-            <div class="banner_text1">
-              <p>
-                농산물의 품질은 외형이 아닌 <b>신선함, 맛</b><br />그리고
-                <b>건강한 생산 과정</b>에 있다는 믿음으로<br />
-                <b>“농부”</b>가 탄생했습니다.
-              </p>
+          </div>
+          <div id="main_innerbanner2" class="swiper-slide">
+            <img src="./imgs/banner2.jpg" alt="banner2" />
+            <div class="banner2_text">
+              <span>못생긴 채소로 예쁜 샐러드를</span>
+              <h2>
+                <b>신선한</b>
+                샐러드 보울 레시피
+              </h2>
+              <p>농부만의 특별 레시피 만나러 가기 ></p>
+            </div>
+          </div>
+
+          <div id="main_innerbanner3" class="swiper-slide">
+            <img src="./imgs/banner3.png" alt="banner3" />
+            <div class="banner3_text">
+              <p>농담은 <b>365</b>일 전 상품</p>
+              <h2>무 료 배 송</h2>
+            </div>
+          </div>
+
+          <div id="main_innerbanner4" class="swiper-slide">
+            <img src="./imgs/banner4.jpg" alt="banner4" />
+            <div class="banner4_text">
+              <p>농담 회원이라면 누구나 참여 가능</p>
+              <span>100% 당첨 확정!</span>
+              <h2>매일매일 <b>룰렛이벤트</b></h2>
+              <p>타 쿠폰과 중복 적용 가능 / 일부 상품 제외</p>
+              <div class="banner_time">00 : 12 : 34 : 12</div>
+              <div class="banner4_img">
+                <img src="./imgs/event_titlesub.png" alt="titlesub" />
+              </div>
             </div>
           </div>
         </div>
-
-        <div class="main_innerbanner2">
-          <img src="./imgs/banner2.jpg" alt="banner2" />
-          <div class="banner2_text">
-            <span>못생긴 채소로 예쁜 샐러드를</span>
-            <h2>
-              <b>신선한</b>
-              샐러드 보울 레시피
-            </h2>
-            <p>농부만의 특별 레시피 만나러 가기 ></p>
-          </div>
-        </div>
-
-        <div class="main_innerbanner3">
-          <img src="./imgs/banner3.png" alt="banner3" />
-          <div class="banner3_text">
-            <p>농담은 <b>365</b>일 전 상품</p>
-            <h2>무 료 배 송</h2>
-          </div>
-        </div>
-
-        <div class="main_innerbanner4">
-          <img src="./imgs/banner4.jpg" alt="banner4" />
-          <div class="banner4_text">
-            <p>농담 회원이라면 누구나 참여 가능</p>
-            <span>100% 당첨 확정!</span>
-            <h2>매일매일 <b>룰렛이벤트</b></h2>
-            <p>타 쿠폰과 중복 적용 가능 / 일부 상품 제외</p>
-            <div class="banner_time">00 : 12 : 34 : 12</div>
-            <div class="banner4_img">
-              <img src="./imgs/event_titlesub.png" alt="titlesub" />
-            </div>
-          </div>
-        </div>
-      </section>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-pagination"></div>
+      </div>
 
       <section id="main_con1">
         <div class="main_inner">
