--- a/login/mypage.html
+++ b/login/mypage.html
@@ -83,7 +83,7 @@
               <li>생년월일</li>
               <li>이메일</li>
               <li>연락처</li>
-              <li>배송지 주소</li>
+              <li>주소</li>
             </ul>
             <ul class="mypage_detail">
               <li>
@@ -128,12 +128,16 @@
         <div class="modal_inner">
           <h2>회원 정보 수정</h2>
           <div class="modal_info_before">
-            <p>현재 이메일</p>
-            <p>audrhks072@naver.com</p>
+            <p class="info_before_title"></p>
+            <p class="info_before_text"></p>
           </div>
           <div class="modal_info_after">
-            <p>변경할 이메일</p>
-            <input type="text" placeholder="변경할 이메일을 입력해주세요." />
+            <p class="info_after_title"></p>
+            <input
+              class="info_after_text"
+              type="text"
+              placeholder="변경할 이메일을 입력해주세요."
+            />
           </div>
           <div class="modal_buttons">
             <button class="modal_close">취소</button>
