--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
 
-        <div class="main_innerbanner4">
+        <div id="mainbanner4" class="main_innerbanner4">
           <img src="./imgs/banner4.jpg" alt="banner4" />
           <div class="banner4_text">
             <p>농담 회원이라면 누구나 참여 가능</p>
