--- a/login/find-pw.html
+++ b/login/find-pw.html
@@ -62,6 +62,11 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+            <div class="res_search_wrap">
+              <div class="res_dropdown_input hidden">
+                <input type="text" placeholder="검색어를 입력해주세요." />
+              </div>
+            </div>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"> <p>0</p></i>
             </div>
