--- a/login/sign.html
+++ b/login/sign.html
@@ -11,6 +11,8 @@
     <!-- custom css & js -->
     <link rel="stylesheet" href="./styles/sign.css" />
     <link rel="stylesheet" href="./styles/res_sign.css" />
+    <link rel="stylesheet" href="./styles/res_find.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <script defer src="./js/sign.js"></script>
     <script defer src="../common.js"></script>
     <!-- domain icon -->
@@ -59,6 +61,11 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+            <div class="res_search_wrap">
+              <div class="res_dropdown_input hidden">
+                <input type="text" placeholder="검색어를 입력해주세요." />
+              </div>
+            </div>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"> <p>0</p></i>
             </div>
