--- a/pages/fruit.html
+++ b/pages/fruit.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./styles/fruit.css" />
     <script defer src="./js/fruit.js"></script>
     <!-- responsive css-->
+    <link rel="stylesheet" href="./styles/res_find.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <link rel="stylesheet" href="../res_style.css" />
     <script defer src="../common.js"></script>
     <title>Fruit</title>
@@ -58,6 +60,11 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+            <div class="res_search_wrap">
+              <div class="res_dropdown_input hidden">
+                <input type="text" placeholder="검색어를 입력해주세요." />
+              </div>
+            </div>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"> <p>0</p></i>
             </div>
