--- a/pages/search.html
+++ b/pages/search.html
@@ -10,6 +10,8 @@
     ></script>
     <!-- custom CSS & detail/header/footer JS -->
     <link rel="stylesheet" href="./styles/search.css" />
+    <link rel="stylesheet" href="./styles/res_find.css" />
+    <link rel="stylesheet" href="../styles/res_header.css" />
     <script defer src="../common.js"></script>
     <!-- domain icon -->
     <link rel="icon" type="images/png" href="../logo/logo.png" />
@@ -57,6 +59,11 @@
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <i class="fa-solid fa-magnifying-glass res_magnify"></i>
+            <div class="res_search_wrap">
+              <div class="res_dropdown_input hidden">
+                <input type="text" placeholder="검색어를 입력해주세요." />
+              </div>
+            </div>
             <div class="basket">
               <i class="fa-solid fa-cart-shopping"> <p>0</p></i>
             </div>
